# nmg-vulkan

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  config.ini  rustfmt.toml
examples/: blank.rs  demo.rs  input.rs  joint.rs  match.rs  model.rs  physics.rs  rigidbody.rs  shape.rs  softbody.rs  text.rs
resources/: Caladea.fnt  ClassicConsole.fnt
shaders/: base.frag  base.vert  build  clean  debug.frag  debug.vert  font2d.frag  font2d.vert  font3d.frag  font3d.vert  shader.frag  shader.vert
src/: alg.rs  config.rs  debug.rs  ecs.rs  entity.rs  font.rs  graphics.rs  input.rs  lib.rs  logic.rs  main.rs  obj_loader.rs  ops.rs  render.rs  statics.rs  util.rs
src/components/: bitmap.rs  camera.rs  draw.rs  label.rs  light.rs  mod.rs  rigidbody.rs  softbody.rs  text.rs  text3d.rs  transform.rs
