[package]
name = "nmg_vulkan"
version = "0.1.0"
authors = ["Aaron C Gaudette <gaudetteaaron@gmail.com>"]

[dependencies]
voodoo = { git = "https://github.com/acgaudette/voodoo" }
voodoo_winit = { git = "https://github.com/acgaudette/voodoo" }
gilrs = "0.7.2"
fnv = "1.0.3"
rust-ini = "0.10.0"
lazy_static = "1.0.0"
tobj = "0.1.6"
png = "0.13.1"

[dev-dependencies]
rand = "0.3"

[features]
memory-test = ["jemallocator"]

[dependencies.jemallocator]
version = "0.1.8"
optional = true
features = ["debug"]
